--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,4 +12,9 @@
  *
  *= require_tree .
  *= require_self
+ *= require jquery-ui-1.10.3.custom
+ *= require slick.grid
+ *= require_tree .
+
+
  */
