Local Time verwendet

--- a/app/views/auswertung/list_temperatur_verlauf.html.erb
+++ b/app/views/auswertung/list_temperatur_verlauf.html.erb
@@ -1,7 +1,6 @@
 <h1>Auswertung#list_temperatur_verlauf</h1>
-<p>Find me in app/views/auswertung/list_temperatur_verlauf.html.erb</p>
 
-<div id="plot_area2">Hugo2</div>
+<div id="plot_area2">Anzeige folgt sofort ...</div>
 
 <script type="text/javascript">
     jQuery(function($){
@@ -27,7 +26,7 @@
                 ]
             }
         ];
-        new plot_diagram('130', 'plot_area2', 'Titel Diagramm', data_array, false, true, true, 'de');
+        new plot_diagram('130', 'plot_area2', 'Temperatur-Verlauf Einzel-Messwerte', data_array, false, true, true, 'de');
 
     })
 
