--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,11 @@
     <div class="head">
       <h2 align="center"><br><br><br>Pool-Temperatursteuerung mit Raspberry Pi</h2>
     </div>
-    <%= form_tag(url_for(:controller=>:auswertung, :action=>:show_temperatur_verlauf)) do %>
-        <%= button_tag('Temperaturverlauf' ) %>
-    <% end %>
+    <div class="buttons">
+      <%= form_tag(url_for(:controller=>:auswertung, :action=>:show_temperatur_verlauf)) do %>
+          <%= button_tag('Temperaturverlauf' ) %>
+      <% end %>
+    </div>
     <%= yield %>
 </body>
 </html>
