--- a/app/views/auswertung/show_temperatur_verlauf.html.erb
+++ b/app/views/auswertung/show_temperatur_verlauf.html.erb
@@ -1,13 +1,19 @@
 <div class="page">
-  <h3>Auswertung Temperaturverlauf</h3>
+  <div style="float: left">
+    <h3>Auswertung Temperaturverlauf</h3>
 
-  <%= form_tag url_for(:action=>:list_temperatur_verlauf) do %>
-      <label for="start">Start</label>
-      <input name="start" type="text" id="start" value="<%= @start %>" title="Start des Betrachtungszeitraumes">
-      <label for="ende">Ende</label>
-      <input name="ende" type="text" id="ende"  value="<%= @ende %>" title="Ende des Betrachtungszeitraumes">
-      <%= button_tag('Anzeigen') %>
-  <% end %>
+    <%= form_tag url_for(:action=>:list_temperatur_verlauf) do %>
+        <label for="start">Start</label>
+        <input name="start" type="text" id="start" value="<%= @start %>" title="Start des Betrachtungszeitraumes">
+        <label for="ende">Ende</label>
+        <input name="ende" type="text" id="ende"  value="<%= @ende %>" title="Ende des Betrachtungszeitraumes">
+        <%= button_tag('Anzeigen') %>
+    <% end %>
+  </div>
+  <div style="float: right">
+    <%= image_tag('Thermometer.jpg') %>
+  </div>
+  <div style="clear: both"></div>
 </div>
 
 <script>
