Temperatur gestern und heute

--- a/app/views/auswertung/show_temperatur_verlauf.html.erb
+++ b/app/views/auswertung/show_temperatur_verlauf.html.erb
@@ -1,6 +1,7 @@
 <div class="page">
   <div style="float: left">
     <h3>Auswertung Temperaturverlauf</h3>
+    Größere Zeiträume können durchaus länger brauchen für Aufbereitung der Anzeige<br><br>
 
     <%= form_tag url_for(:action=>:list_temperatur_verlauf) do %>
         <label for="start">Start</label>
