--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
         <% end %>
       </div>
       <div class="float_button">
-        <%= form_tag(url_for(:controller=>:auswertung, :action=>:show_konfiguration)) do %>
+        <%= form_tag(url_for(:controller=>:konfiguration, :action=>:show_konfiguration)) do %>
             <%= button_tag('Konfiguration' ) %>
         <% end %>
       </div>
