--- a/app/views/konfiguration/show_konfiguration.html.erb
+++ b/app/views/konfiguration/show_konfiguration.html.erb
@@ -62,6 +62,28 @@
 
         <br>
 
+        <fieldset>
+          <legend>Betriebsmodus der Pumpensteuerung</legend>
+          <table width="100%">
+            <tr>
+              <td>
+                Automatisch (entsprechend Regeln)
+                <%= radio_button(:konfiguration, :modus, 0)%>
+              </td>
+              <td>
+                Ständig an (Regeln inaktiv)
+                <%= radio_button(:konfiguration, :modus, 1)%>
+              </td>
+              <td>
+                Ständig aus (Regeln inaktiv)
+                <%= radio_button(:konfiguration, :modus, 2)%>
+              </td>
+            </tr>
+          </table>
+        </fieldset>
+
+        <br>
+
         <%= submit_tag('Speichern') %>
     <% end %>
 
