Test auf max. Temperatur

--- a/app/views/konfiguration/show_konfiguration.html.erb
+++ b/app/views/konfiguration/show_konfiguration.html.erb
@@ -23,6 +23,7 @@
           <legend>Steuerung über Temperatur-Werte</legend>
           <table border="1" width="100%">
             <%= column_record(:Min_Aktiv_Minuten_Vor_Vergleich) %>
+            <%= column_record(:max_pool_temperatur) %>
           </table>
         </fieldset>
 
