--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,30 +1,33 @@
 <div class="page">
-  <h3>Aktueller Status von <%= @temperatur.created_at.strftime('%d.%m.%Y %H:%M:%S') %></h3>
-  <table border="1">
-    <tr>
-      <td>Temperatur in der Sonne</td><td align="right"><%= @temperatur.Sonne.round(1) %> °</td>
-    </tr>
-    <tr>
-      <td>Temperatur im Schatten</td><td align="right"><%= @temperatur.Schatten.round(1) %> °</td>
-    </tr>
-    <tr>
-      <td>Temperatur im Vorlauf (nach Durchlaufen der Solaranlage)</td><td align="right"><%= @temperatur.Vorlauf.round(1) %> °</td>
-    </tr>
-    <tr>
-      <td>Temperatur im Rücklauf (enstpricht der Beckentemperatur wenn Pumpe läuft)</td><td align="right"><%= @temperatur.Ruecklauf.round(1) %> °</td>
-    </tr>
-    <tr>
-      <td>Pumpenbetrieb</td><td><%= @temperatur.Pumpenstatus == 0 ? 'AUS' : 'AN' %></td>
-    </tr>
-    <tr>
-      <td>Pumpe an wegen</td><td><%= @temperatur.pumpe_an_grund %></td>
-    </tr>
-    <tr>
-      <td>Pumpensteuerung</td><td><%= @konfiguration.modus_text %></td>
-    </tr>
+  <% if @temperatur.nil? %>
+      <h3>Willkommen bei Pool-Steuerung mit Raspberry Pi</h3>
+      Nach Beginn der Temperaturerfassung wird hier der aktuelle Status angezeigt
+  <% else %>
+    <h3>Aktueller Status von <%= @temperatur.created_at.strftime('%d.%m.%Y %H:%M:%S') %></h3>
+    <table border="1">
+      <tr>
+        <td>Temperatur in der Sonne</td><td align="right"><%= @temperatur.Sonne.round(1) %> °</td>
+      </tr>
+      <tr>
+        <td>Temperatur im Schatten</td><td align="right"><%= @temperatur.Schatten.round(1) %> °</td>
+      </tr>
+      <tr>
+        <td>Temperatur im Vorlauf (nach Durchlaufen der Solaranlage)</td><td align="right"><%= @temperatur.Vorlauf.round(1) %> °</td>
+      </tr>
+      <tr>
+        <td>Temperatur im Rücklauf (enstpricht der Beckentemperatur wenn Pumpe läuft)</td><td align="right"><%= @temperatur.Ruecklauf.round(1) %> °</td>
+      </tr>
+      <tr>
+        <td>Pumpenbetrieb</td><td><%= @temperatur.Pumpenstatus == 0 ? 'AUS' : 'AN' %></td>
+      </tr>
+      <tr>
+        <td>Pumpe an wegen</td><td><%= @temperatur.pumpe_an_grund %></td>
+      </tr>
+      <tr>
+        <td>Pumpensteuerung</td><td><%= @konfiguration.modus_text %></td>
+      </tr>
 
-  </table>
-
-
+    </table>
+  <% end %>
 </div>
 
