y-Skala auf rechter Seite

--- a/app/views/auswertung/list_temperatur_verlauf.html.erb
+++ b/app/views/auswertung/list_temperatur_verlauf.html.erb
@@ -50,7 +50,8 @@
         new plot_diagram('130', 'plot_area2', 'Temperatur-Verlauf Einzel-Messwerte', data_array,
                 {
                     plot_diagram: {locale: 'de'},
-                    series: {points: {show: false}}
+                    series: {points: {show: false}},
+                    yaxis: { position: 'right'}
                 }
         );
 
