Minimal-Differenzen für Steuerung

--- a/app/views/konfiguration/show_konfiguration.html.erb
+++ b/app/views/konfiguration/show_konfiguration.html.erb
@@ -35,6 +35,8 @@
           <legend>Steuerung über Temperatur-Werte</legend>
           <table border="1" width="100%">
             <%= column_record(:Min_Aktiv_Minuten_Vor_Vergleich) %>
+            <%= column_record(:min_sonne_ruecklauf_distanz) %>
+            <%= column_record(:min_vorlauf_ruecklauf_distanz) %>
             <%= column_record(:max_pool_temperatur) %>
           </table>
         </fieldset>
