--- a/app/views/konfiguration/show_konfiguration.html.erb
+++ b/app/views/konfiguration/show_konfiguration.html.erb
@@ -25,6 +25,9 @@
         <div style="float:left; padding-left: 20px;">
           <%= submit_tag('Speichern', :title=>'Speicher als ab jetzt aktive Konfiguration') %>
         </div>
+        <div style="float:left; padding-left: 20px;">
+          <%= submit_tag('Globale Historie', :title=>'Historie aller Speicherungen der Konfiguration') %>
+        </div>
         <div style="clear:both"></div>
         </h3>
 
