--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,19 +16,24 @@
             <%= button_tag('Status aktuell' ) %>
         <% end %>
       </div>
-      <div class="float_button">
+      <div class="float_button" title="Kurve des Temperaturverlaufes der letzten beiden Tage">
         <%= form_tag(url_for(:controller=>:auswertung, :action=>:show_temperatur_verlauf_aktuell)) do %>
             <%= button_tag('Temperaturverlauf gestern und heute' ) %>
         <% end %>
       </div>
-      <div class="float_button">
+      <div class="float_button" title="Kurve des Temperaturverlaufes mit Auswahl der Zeitspanne">
         <%= form_tag(url_for(:controller=>:auswertung, :action=>:show_temperatur_verlauf)) do %>
             <%= button_tag('Temperaturverlauf variabel' ) %>
         <% end %>
       </div>
-      <div class="float_button">
+      <div class="float_button" title="Ansicht und Anpassung der Konfigurations-Parameter">
         <%= form_tag(url_for(:controller=>:konfiguration, :action=>:show_konfiguration)) do %>
             <%= button_tag('Konfiguration' ) %>
+        <% end %>
+      </div>
+      <div class="float_button" title="Kurven von aggregierten Werten mit Auswahl der Zeitspanne">
+        <%= form_tag(url_for(:controller=>:auswertung, :action=>:show_statistik)) do %>
+            <%= button_tag('Statistik' ) %>
         <% end %>
       </div>
       <div style="clear: both"></div>
